<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task manager</string>

    <string name="action_options">Options</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>


    <string name="kill_process">Kill process</string>
    <string name="more_info">More info {fa_arrow_circle_o_right}</string>
    <string name="show_in_android_info">Show in details</string>
    <string name="kill_app">Kill application</string>

    <string name="memory_kb">Kb</string>
    <string name="memory_mb">Mb</string>
    <string name="memory_gb">Gb</string>
    <string name="package_name">Package name:&#160;</string>
    <string name="version">Version:&#160;</string>
    <string name="installTime">Install time:&#160;</string>
    <string name="updateTime">Last update:&#160;</string>
    <string name="pid">Process id:&#160;</string>
    <string name="memory">Memory usage:&#160;</string>
    <string name="ram_used">RAM available:&#160;</string>

    <string name="opt_ram_title">RAM update</string>
    <string name="opt_ram_detail">Period in sec for used RAM progress updating</string>
    <string name="cant_kill_this">You can\'t kill this app</string>
    <string name="action_system_info">System info</string>
    <string name="os_version">Os version</string>
    <string name="release">Release</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="product">Product</string>
    <string name="brand">Brand</string>
    <string name="display">Display</string>
    <string name="hardware">Hardware</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="serial">Serial</string>
    <string name="user">User</string>
    <string name="host">Host</string>
</resources>