<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflowOption"
        android:icon="@drawable/ic_sysbar_menu_white"
        android:title="@string/action_options"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/selectAll"
                android:title="@string/action_select_all"
                app:showAsAction="never"/>
            <item
                android:id="@+id/deselectAll"
                android:title="@string/action_deselect_all"
                app:showAsAction="never"/>
            <item
                android:id="@+id/systemInfo"
                android:title="@string/action_system_info"
                app:showAsAction="never"/>
            <item
                android:id="@+id/settings"
                android:title="@string/action_settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/about"
                android:title="@string/action_about"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>